--- a/views/index.ejs
+++ b/views/index.ejs
@@ -761,6 +761,12 @@
     </form>
 
     <img src="../images/up-button.png" id="backtop" onclick="totop()" />
+    <footer>
+        <p>
+            <a href="https://www.flaticon.com/free-icon/settings_576981" title="settings icons">Settings icons created
+                by Soodesign - Flaticon</a>
+        </p>
+    </footer>
 
     <script>
         // --- START OF ROUTING ---
