Switched Port + Changed `vx` to `fx` for Twitter

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -625,7 +625,7 @@
                 special variants of social media URLs for better embedding in messages containing links. Here are a few
                 examples:
             <ul>
-                <li>twitter.com ➡ vxtwitter.com</li>
+                <li>twitter.com ➡ fxtwitter.com</li>
                 <li>instagram.com ➡ ddinstagram.com</li>
                 <li>pixiv.net ➡ phixiv.net</li>
             </ul>
