--- a/views/index.ejs
+++ b/views/index.ejs
@@ -330,7 +330,7 @@
                     For all inputs below, ensure that they are separated by a <b>line break</b> and that each desired
                     input
                     is mapped correctly.<br>
-                    (Ex. Line 1 of each input will be mapped to the first command in the <b>!trimMedia.ps1</b> script
+                    (Ex. Line 1 of each input will be mapped to the first command in the script
                     file)
                 </p>
                 <hr>
